configuration and rake tasks for installation modified

--- a/config/plugins.yml
+++ b/config/plugins.yml
@@ -1,10 +1,26 @@
-#data:
-#    - "svn://www.in-silico.de/opentox/data/cpdb080429/"
-#    - "svn://www.in-silico.de/opentox/data/iris080215/"
-#    - "svn://www.in-silico.de/opentox/data/kazius06/"
-#    - "svn://www.in-silico.de/opentox/data/fda-human-liver/"
-#    - "svn://www.in-silico.de/opentox/data/fdamdd080215/"
-#    - "svn://www.in-silico.de/opentox/data/epafhm080215/"
+# data and validation results
+- 
+  url: "ssh://opentox.org/~ch/git/cpdb-data.git"
+  path: public/data/cpdb
+  version: 080429
+- 
+  url: "ssh://opentox.org/~ch/git/iris-data.git"
+  path: public/data/iris
+  version: 080215
+- 
+  url: "ssh://opentox.org/~ch/git/kazius-data.git"
+  path: public/data/kazius
+- 
+  url: "ssh://opentox.org/~ch/git/fda-human-liver-data.git"
+  path: public/data/fda-human-liver
+- 
+  url: "ssh://opentox.org/~ch/git/fdamdd-data.git"
+  path: public/data/fdamdd
+  version: 080215
+- 
+  url: "ssh://opentox.org/~ch/git/epafhm-data.git"
+  path: public/data/epafhm
+  version: 080215
 
 # plugins
 # put the the plugins, that you are developing here. you will need shell access to push changes back
@@ -16,6 +32,14 @@
   url: "ssh://opentox.org/~ch/git/lazar-plugin.git"
   path: vendor/plugins/lazar
   install: "rake lazar:program:install"
+#-
+#  url: "ssh://opentox.org/~ch/git/openbabel.git"
+#  path: vendor/lib/openbabel/src
+#  install: "rake lazar:program:install"
+#-
+#  url: "ssh://opentox.org/~ch/git/R.git"
+#  path: vendor/lib/R/src
+#  install: "rake lazar:program:install"
 # openbabel
 # R
 # cdk
@@ -30,18 +54,22 @@
   url: "git://github.com/activescaffold/file_column.git"
   path: vendor/plugins/file_column
 
-# rails:
 -
-  url: "git://github.com/rails/rails.git"
-  path: vendor/rails
-  version: "v2.1.0"
+  url: "git://github.com/rails/exception_notification.git"
+  path: vendor/plugins/exception_notification
+
+# rails:
+#-
+#  url: "git://github.com/rails/rails.git"
+#  path: vendor/rails
+#  version: "v2.1.0"
 
 # gems:
 # it is a good idea to freeze all gems that you are using to avoid versioning conflicts
--
-  url: "git://github.com/nex3/haml.git"
-  path: vendor/gems/haml
-  install: "cd vendor/gems/haml/ && rake install && haml --rails #{RAILS_ROOT}"
+# -
+ #  url: "git://github.com/nex3/haml.git"
+#   path: vendor/gems/haml
+#   install: "cd vendor/gems/haml/ && rake install && haml --rails #{RAILS_ROOT}"
 # rake
 # mechanize
 # rjb
