http git repositories in config/plugins.yml

--- a/config/plugins.yml
+++ b/config/plugins.yml
@@ -1,12 +1,12 @@
 # plugins
 # put the the plugins, that you are developing here. you will need shell access to push changes back
 -
-  url: "ssh://opentox.org/~ch/git/opentox-plugin.git"
+  url: "http://opentox.org/git/ch/opentox-plugin.git"
   path: vendor/plugins/opentox
   install: "rake opentox:install"
   # opentox installs also  openbabel, R and cdk
 -
-  url: "ssh://opentox.org/~ch/git/lazar-plugin.git"
+  url: "http://opentox.org/git/ch/lazar-plugin.git"
   path: vendor/plugins/lazar
   install: "rake lazar:program:install"
 
@@ -28,25 +28,25 @@
 
 # data and validation results
 - 
-  url: "ssh://opentox.org/~ch/git/cpdb-data.git"
+  url: "http://opentox.org/git/ch/cpdb-data.git"
   path: public/data/cpdb
   tag: 080429
 - 
-  url: "ssh://opentox.org/~ch/git/iris-data.git"
+  url: "http://opentox.org/git/ch/iris-data.git"
   path: public/data/iris
   tag: 080215
 - 
-  url: "ssh://opentox.org/~ch/git/kazius-data.git"
+  url: "http://opentox.org/git/ch/kazius-data.git"
   path: public/data/kazius
 - 
-  url: "ssh://opentox.org/~ch/git/fda-human-liver-data.git"
+  url: "http://opentox.org/git/ch/fda-human-liver-data.git"
   path: public/data/fda-human-liver
 - 
-  url: "ssh://opentox.org/~ch/git/fdamdd-data.git"
+  url: "http://opentox.org/git/ch/fdamdd-data.git"
   path: public/data/fdamdd
   tag: 080215
 - 
-  url: "ssh://opentox.org/~ch/git/epafhm-data.git"
+  url: "http://opentox.org/git/ch/epafhm-data.git"
   path: public/data/epafhm
   tag: 080215
 
