lazar submodule removed

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,10 @@
+lib/lazar-core
 vendor/*
-public/data
 db/*sqlite3
 log/*.log
 tmp/**/*
 .DS_Store
 public/cache/**/*
+public/models
 doc/api
 doc/app
